2003-04-08  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03849] fix no INET6
	* ftp.c: no need ifdef INET6

2003-04-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03846] fix use_history
	* main.c (main): move loadHistory

2003-04-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03844] w3mhelp.cgi update
	* scripts/w3mhelp-funcdesc.en.pl.in: add %menu_funcdesc
	* scripts/w3mhelp-funcdesc.ja.pl.in: add %menu_funcdesc
				update %title
	* scripts/w3mhelp-funcname.pl.in: add %menu_funcname
				add %menu_keyfunc
	* scripts/w3mhelp.cgi.in: modified for menu
				link to keymap

2003-04-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03843] cleanup macros
	* config.h.dist config.h.in etc.c file.c fm.h ftp.c linein.c 
	   main.c rc.c:
	   delete EMACS_LIKE_LINEEDIT, VI_PREC_NUM, LABEL_TOPLINE, 
		NEXTPAGE_TOPLINE, FTPPASS_HOSTNAMEGEN
	   use_mark default FALSE
	   emacs_like_lineedit default FALSE
	   vi_prec_num default FALSE
	   add UseHistory, use_history
	* NEWS: rc: use_history

2003-04-05  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03838] W3M_LIBS splitted from LIBS
	* Makefile.in (W3M_LIBS): added
	* acinclude.m4 (AC_W3M_TERMLIB): use W3M_LIB
		(AC_W3M_SSL): ditto
	* configure.in (W3M_LIBS): added

2003-04-04  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03837] Re: gif animation with no delay_time
	* w3mimg/fb/fb_gdkpixbuf.c (get_animation_size): add delay
				check delay_time
		(get_image_size): no need delay time
		(fb_image_load): check delay 
		(draw): no bg
	* w3mimg/fb/fb_w3mimg.c (w3mfb_show_image): delete delay skip loop
	* w3mimg/x11/x11_w3mimg.c (get_animation_size): add delay
				check delay_time
		(x11_load_image): check delay
		(x11_get_image_size): no need delay time

2003-03-28  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* doc(-jp)/keymap.default: ';' is quoted

2003-03-28  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* Makefile.in: distclean removes core

2003-03-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
